# paeonia

./: README.md  environment.yml  paeonia_workbench.ipynb  pyproject.toml
.github/workflows/: python-package-conda.yml  python-package.yml
src/paeonia/: __init__.py  __main__.py  bar.py  dac.py  dsp.py  fluidsynth.py  midi.py  note.py  parser.py  part.py  pitch.py  rule.py  score.py  tonality.py  triadex.py  utils.py  voice.py
src/paeonia/data/: note_template.ly  score_template.ly  voice_template.ly  workbench.ipynb
test/: test_bar.py  test_dsp.py  test_main.py  test_note.py  test_parser.py  test_pitch.py  test_rule.py  test_tonality.py  test_triadex.py  test_voice.py
